# RayChess

./: .gitignore  CMakeLists.txt
cmake/: CPM.cmake
src/: board.c  board.h  main.c
